<resources>
    <string name="app_name">Surtilandiapp</string>
    <!--<string-array name="options_array">-->
    <!--<item>Mi Tienda</item>-->
    <!--<item>Mis Productos</item>-->
    <!--<item>Mis Competidores</item>-->
    <!--<item>Perfil</item>-->
    <!--<item>Ayuda</item>-->
    <!--</string-array>-->
    <string-array name="navigation_drawer_items_array">
        <item>Mi Tienda</item>
        <item>Mis Productos</item>
        <item>Mis Competidores</item>
        <item>Perfil</item>
        <item>Ayuda</item>
    </string-array>

    <string-array name="navigation_drawer_client_items_array">
        <item>Tiendas</item>
        <item>Productos</item>
        <item>Perfil</item>
        <item>Ayuda</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="forget_password">Solo necesitamos el email con el que hiciste el registro para enviarte las instrucciones de recuperación de contraseña</string>
    <string name="regresar">&#60;&#60; Regresar</string>
    <string name="title_activity_add_product">Agregar Producto</string>
    <string name="categoria">Categoría</string>
    <string name="producto">Producto</string>
    <string name="precio">Precio</string>
    <string name="descripcion">Descripción</string>
    <string name="disponible">Disponible</string>
    <string name="informacion">Información</string>
    <string name="title_activity_menu_tendero">Tendero</string>
    <string name="title_activity_menu_cliente">Cliente</string>
    <string name="requerido">Requerido</string>
    <string name="contrasena_no_coinciden">Las contraseñas no coinciden</string>
    <string name="title_activity_create_store">Crear Tienda</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Teléfono</string>
    <string name="email">Email</string>
    <string name="direccion">Dirección</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="contraseña">Contraseña</string>
    <string name="horarioApertura">Horario Apertura</string>
    <string name="horarioCierre">Horario Cierre</string>
    <string name="tendero">Tendero</string>
    <string name="registro_exitoso">Registro exitoso</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre_requerido">Nombre requerido</string>
    <string name="tienda_guardada">Tienda guardada</string>
    <string name="ubicacion">Ubicación</string>
    <string name="productos">Productos</string>
    <string name="comentarios">Comentarios</string>
    <string name="calificame">Califícame</string>
    <string name="imagen">Imagen</string>
    <string name="tienda">Tienda</string>
    <string name="title_activity_compare_price">Compare Precios</string>
    <string name="tarjeta_2">Tarjeta 2</string>
    <string name="tienda_requerida">Primero debe crear una tienda</string>
    <string name="direccion_requerido">Dirección requerida</string>>
</resources>
