<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="unal.edu.co.surtilandiapp.features.shopkeeper.add.AddProductActivity"
    tools:showIn="@layout/activity_add_product">


    <ImageView
        android:layout_gravity="center"
        android:src="@drawable/home_screen"
        android:layout_width="200dp"
        android:layout_height="150dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoria"/>

    <Spinner
        android:id="@+id/spCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/producto"/>

    <Spinner
        android:id="@+id/spProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Spinner>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTint="@color/colorPlaceholder"
            android:maxLines="1"
            android:hint="@string/precio"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTint="@color/colorPlaceholder"
            android:maxLines="3"
            android:hint="@string/descripcion"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <Switch
        android:text="@string/disponible"
        android:id="@+id/simpleSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>
