<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="unal.edu.co.surtilandiapp.features.store.MenuStoreActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorBackgroundMenu"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <Button

            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:text="@string/imagen"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btInformacion"
            android:textColor="@color/white"
            android:background="@color/colorAccent"
            android:text="@string/informacion"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <Button
            android:id="@+id/btUbicacion"
            android:textColor="@color/white"
            android:background="@color/colorAccent"
            android:text="@string/ubicacion"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btProductos"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:text="@string/productos"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <Button
            android:id="@+id/btComentarios"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:text="@string/comentarios"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btCalificame"
            android:textColor="@color/white"
            android:background="@color/colorAccent"
            android:text="@string/calificame"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>
